// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 1`] = `
.emotion-0 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #000000;
  border: 2px solid #000000;
  color: #000000;
  background-color: #ffffff;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000000;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px; background-color: rgb(222, 222, 222);"
  >
    <span
      class="emotion-2"
      color="primary.default"
      data-testid="typography"
      style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 2`] = `
.emotion-0 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #000000;
}

.emotion-2 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #fafafa;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <i
      class="emotion-2"
      color="#fafafa"
      data-testid="icon"
    >
      check
    </i>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 3`] = `
.emotion-0 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #292929;
  border: 2px solid #a3a3a3;
  color: #a3a3a3;
  background-color: #ffffff;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #a3a3a3;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="disabled"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <span
      class="emotion-2"
      color="content.light"
      data-testid="typography"
      style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 4`] = `
.emotion-0 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #a00000;
  border: 2px solid #a00000;
  color: #a00000;
  background-color: #ffffff;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #a00000;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <span
      class="emotion-2"
      color="error.default"
      data-testid="typography"
      style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 5`] = `
.emotion-0 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #a00000;
  border: 2px solid #a00000;
  color: #a00000;
  background-color: #ffffff;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #a00000;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
    data-testid="counter"
    style="border-width: 1px; background-color: rgb(255, 203, 192);"
  >
    <span
      class="emotion-2"
      color="error.default"
      data-testid="typography"
      style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 1`] = `
.emotion-0 {
  color: #000000;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 2`] = `
.emotion-0 {
  color: #000000;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 3`] = `
.emotion-0 {
  color: #a3a3a3;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="disabled"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 4`] = `
.emotion-0 {
  color: #a00000;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 5`] = `
.emotion-0 {
  color: #a00000;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #000000;
  border: 2px solid #000000;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000000;
}

.emotion-5 {
  color: #000000;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px; background-color: rgb(222, 222, 222);"
    >
      <span
        class="emotion-4"
        color="primary.default"
        data-testid="typography"
        style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-5 emotion-6"
      color="primary"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #000000;
}

.emotion-4 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #fafafa;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-5 {
  color: #000000;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <i
        class="emotion-4"
        color="#fafafa"
        data-testid="icon"
      >
        check
      </i>
    </span>
    <span
      class="emotion-5 emotion-6"
      color="primary"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #292929;
  border: 2px solid #a3a3a3;
  color: #a3a3a3;
  background-color: #ffffff;
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #a3a3a3;
}

.emotion-5 {
  color: #a3a3a3;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="disabled"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4"
        color="content.light"
        data-testid="typography"
        style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-5 emotion-6"
      color="disabled"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 4`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #a00000;
  border: 2px solid #a00000;
  color: #a00000;
  background-color: #ffffff;
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #a00000;
}

.emotion-5 {
  color: #a00000;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="error"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4"
        color="error.default"
        data-testid="typography"
        style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-5 emotion-6"
      color="error"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 5`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  border: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #a00000;
  border: 2px solid #a00000;
  color: #a00000;
  background-color: #ffffff;
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 10px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #a00000;
}

.emotion-5 {
  color: #a00000;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="error"
      data-testid="counter"
      style="border-width: 1px; background-color: rgb(255, 203, 192);"
    >
      <span
        class="emotion-4"
        color="error.default"
        data-testid="typography"
        style="width: 24px; height: 24px; display: flex; align-items: center; justify-content: center;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-5 emotion-6"
      color="error"
    >
      Label
    </span>
  </li>
</div>
`;
